--- a/composer.json
+++ b/composer.json
@@ -29,6 +29,8 @@
   },
   "scripts": {
     "test": "phpunit --colors=always --configuration=etc/phpunit.xml --testsuite all",
-    "test-http": "phpunit --colors=always --configuration=etc/phpunit.xml --testsuite http"
+    "test-http": "phpunit --colors=always --configuration=etc/phpunit.xml --testsuite http",
+    "test-types": "phpunit --colors=always --configuration=etc/phpunit.xml --testsuite types",
+    "test-html": "phpunit --colors=always --configuration=etc/phpunit.xml --testsuite html"
   }
 }
