--- a/composer.json
+++ b/composer.json
@@ -32,6 +32,10 @@
     "test-http": "phpunit --colors=always --configuration=etc/phpunit.xml --testsuite http",
     "test-types": "phpunit --colors=always --configuration=etc/phpunit.xml --testsuite types",
     "test-html": "phpunit --colors=always --configuration=etc/phpunit.xml --testsuite html",
-    "test-array": "phpunit --colors=always --configuration=etc/phpunit.xml --testsuite array"
+    "test-array": "phpunit --colors=always --configuration=etc/phpunit.xml --testsuite array",
+    "test-templates": "phpunit --colors=always --configuration=etc/phpunit.xml --testsuite templates"
+  },
+  "require": {
+    "twig/twig": "^3.3"
   }
 }
