--- a/composer.json
+++ b/composer.json
@@ -33,6 +33,7 @@
     "test-types": "phpunit --colors=always --configuration=etc/phpunit.xml --testsuite types",
     "test-html": "phpunit --colors=always --configuration=etc/phpunit.xml --testsuite html",
     "test-array": "phpunit --colors=always --configuration=etc/phpunit.xml --testsuite array",
+    "test-date": "phpunit --colors=always --configuration=etc/phpunit.xml --testsuite date",
     "test-templates": "phpunit --colors=always --configuration=etc/phpunit.xml --testsuite templates"
   },
   "require": {
