--- a/composer.json
+++ b/composer.json
@@ -38,6 +38,7 @@
     "test-array": "phpunit --colors=always --configuration=etc/phpunit.xml --testsuite array",
     "test-date": "phpunit --colors=always --configuration=etc/phpunit.xml --testsuite date",
     "test-integer": "phpunit --colors=always --configuration=etc/phpunit.xml --testsuite integer",
+    "test-bool": "phpunit --colors=always --configuration=etc/phpunit.xml --testsuite bool",
     "test-templates": "phpunit --colors=always --configuration=etc/phpunit.xml --testsuite templates"
   },
   "require": {
