--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
       "Task\\": "src/"
     },
     "files": [
-      "src/Tasks/Types/Integer/isEven.php"
+      "src/Tasks/Types/Integer/isEven.php",
+      "src/Tasks/Types/String/reverseString.php"
     ]
   },
   "autoload-dev": {
@@ -38,6 +39,7 @@
     "test-array": "phpunit --colors=always --configuration=etc/phpunit.xml --testsuite array",
     "test-date": "phpunit --colors=always --configuration=etc/phpunit.xml --testsuite date",
     "test-integer": "phpunit --colors=always --configuration=etc/phpunit.xml --testsuite integer",
+    "test-string": "phpunit --colors=always --configuration=etc/phpunit.xml --testsuite string",
     "test-bool": "phpunit --colors=always --configuration=etc/phpunit.xml --testsuite bool",
     "test-templates": "phpunit --colors=always --configuration=etc/phpunit.xml --testsuite templates",
     "test-construction": "phpunit --colors=always --configuration=etc/phpunit.xml --testsuite construction"
