--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
     "files": [
       "src/Tasks/Types/Integer/isEven.php",
       "src/Tasks/Types/Integer/joinNumbersFromRange.php",
+      "src/Tasks/Types/Integer/randomValues.php",
       "src/Tasks/Types/String/reverseString.php"
     ]
   },
