--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
       "src/Tasks/Types/Integer/isEven.php",
       "src/Tasks/Types/Integer/joinNumbersFromRange.php",
       "src/Tasks/Types/Integer/randomValues.php",
-      "src/Tasks/Types/String/reverseString.php"
+      "src/Tasks/Types/String/reverseString.php",
+      "src/Tasks/Types/Array/applyArray.php"
     ]
   },
   "autoload-dev": {
