added function reverseArray

--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,8 @@
       "src/Tasks/Types/Integer/joinNumbersFromRange.php",
       "src/Tasks/Types/Integer/randomValues.php",
       "src/Tasks/Types/String/reverseString.php",
-      "src/Tasks/Types/Array/applyArray.php"
+      "src/Tasks/Types/Array/applyArray.php",
+      "src/Tasks/Types/Array/reverseArray.php"
     ]
   },
   "autoload-dev": {
