added function isContinuousSequence

--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,8 @@
       "src/Tasks/Types/Integer/randomValues.php",
       "src/Tasks/Types/String/reverseString.php",
       "src/Tasks/Types/Array/applyArray.php",
-      "src/Tasks/Types/Array/reverseArray.php"
+      "src/Tasks/Types/Array/reverseArray.php",
+      "src/Tasks/Types/Array/isContinuousSequence.php"
     ]
   },
   "autoload-dev": {
