--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,8 @@
       "src/Tasks/Types/String/reverseString.php",
       "src/Tasks/Types/Array/applyArray.php",
       "src/Tasks/Types/Array/reverseArray.php",
-      "src/Tasks/Types/Array/isContinuousSequence.php"
+      "src/Tasks/Types/Array/isContinuousSequence.php",
+      "src/Tasks/Types/Array/arrayMax.php"
     ]
   },
   "autoload-dev": {
