--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,8 @@
       "src/Tasks/Types/Array/isContinuousSequence.php",
       "src/Tasks/Types/Array/arrayMax.php",
       "src/Tasks/Types/Array/arrayAverage.php",
-      "src/Tasks/Types/Array/getTotalAmount.php"
+      "src/Tasks/Types/Array/getTotalAmount.php",
+      "src/Tasks/Types/Array/flatten.php"
     ]
   },
   "autoload-dev": {
