add function checkBalanced

--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,8 @@
       "src/Tasks/Types/Array/getTotalAmount.php",
       "src/Tasks/Types/Array/flatten.php",
       "src/Tasks/Types/Array/arrayBubbleSort.php",
-      "src/Tasks/Types/Array/addEmail.php"
+      "src/Tasks/Types/Array/addEmail.php",
+      "src/Tasks/Types/Array/checkBalanced.php"
     ]
   },
   "autoload-dev": {
