add search on array on recursion

--- a/composer.json
+++ b/composer.json
@@ -33,7 +33,8 @@
       "src/Tasks/Types/Array/arrayBubbleSort.php",
       "src/Tasks/Types/Array/addEmail.php",
       "src/Tasks/Types/Array/checkBalanced.php",
-      "src/Tasks/Types/Array/getChunked.php"
+      "src/Tasks/Types/Array/getChunked.php",
+      "src/Tasks/Types/Array/searchArrayRecursive.php"
     ]
   },
   "autoload-dev": {
